testcases/binding.yaml
apiVersion: admissionregistration.x-k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: k8s-policy-binding
spec:
  policyName: k8s-policy
  validationActions:
  - Deny
